--- a/momentum/style.css
+++ b/momentum/style.css
@@ -75,6 +75,9 @@ h2 {
   margin: 1rem;
   opacity: 0.8;
   cursor: pointer;
+  background:url("./assets/pngegg.png") no-repeat;
+  background-size: cover;
+  border: none;
 }
 .bg:hover {
   filter: grayscale(.2);
@@ -86,19 +89,21 @@ h2 {
 .bg:active{
   transform: scale(1.02);
   filter: drop-shadow(0px 0px 10px white);
-
+}
+.bg:disabled {
+  opacity: 0.5;
 }
 
 
 .btn {
   width: 60px;
   height: 60px;
-  border: 0;
+  border: none;
   filter: drop-shadow(0px 0px 2px white);
   opacity: 0.8;
   cursor: pointer;
-
-  background-repeat: no-repeat;
+  background:url("./assets/gratis.png") no-repeat;
+  background-size: cover;
   margin: 10px;
 }
 .btn:hover {
@@ -111,6 +116,9 @@ h2 {
 .btn:active{
   transform: scale(1.02);
   filter: drop-shadow(0px 0px 10px white);
+}
+.btn:disabled {
+  opacity: 0.5;
 }
 
 @media (max-width: 700px) {
